<resources>
    <string name="app_name">chatapp</string>
    <string name="welcome_to_the_chat">Welcome to the chat</string>
    <string name="login">Login</string>
    <string name="login_to_continue">login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="add_user">add_user</string>
    <string name="search_for_user">Search for user</string>
    <string name="user">user</string>
    <string name="user_name">user name</string>
    <string name="message">Message</string>
    <string name="online">Online</string>
</resources>