<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@color/background"
    tools:context=".activities.SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/white"
            android:text="@string/welcome_to_the_chat"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="@color/white"
            android:alpha="0.8"
            android:text="@string/login_to_continue"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_90sdp"
            android:background="@drawable/input_field"
            android:hint="@string/email"
            android:textColorHint="@color/hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/input_field"
            android:hint="@string/password"
            android:textColorHint="@color/hint"
            android:imeOptions="actionGo"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:text="Sign In"
                android:textStyle="bold"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_80sdp"
                app:strokeColor="@color/button_border"
                app:strokeWidth="@dimen/_2sdp"
                />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

        <TextView
            android:id="@+id/CreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"/>

    </LinearLayout>


</ScrollView>